Fix overflow for "Working Now" on dahs.

--- a/assets/styles/dashboard/styles.less
+++ b/assets/styles/dashboard/styles.less
@@ -105,6 +105,8 @@
       }
 
       .worker {
+        overflow: auto;
+
         .name {
           .generalfont(14px, #000, bold);
           padding-top: 5px;
